@@ -13,8 +13,8 @@
 var BD18 = {};
 BD18.noteTimeout = null; // Used by doLogNote().
 BD18.welcomename = null; // Used by doLogNote().
-BD18.help = "http://wiki.board18.org/w/Player%27s_Guide_V2.0";
-BD18.version = "2.3.2";
+BD18.help = "http://wiki.board18.org/w/Player%27s_Guide_V2.4";
+BD18.version = "2.4.0";
 
 /* Function setPage() adjusts the height and width
  * of rightofpage and the height of lefttofpage.
