@@ -1,3 +1,12 @@
+BOARD18 2.4.0 Release Notes
+
+Changes from 2.3.2 Release:
+Implemented Issue 61 - Correctly rout replies to administrative messages. 
+Sorted player display in board18Misc.php and board18New.php.
+Revised the enhanced display of players names
+on the left side of board18Misc.php and board18New.php.
+Also upgraded player's guide to release  4.0.x.
+
 BOARD18 2.3.2 Release Notes
 
 Changes from 2.3.1 Release:
